# src/modules/category/dto/create-category.dto.ts
@@ -1,1 +1,8 @@
-export class CreateCategoryDto {}
+import { ApiProperty, ApiPropertyOptional } from "@nestjs/swagger";
+
+export class CreateCategoryDto {
+    @ApiProperty()
+    title: string;
+    @ApiPropertyOptional()
+    priority: number;
+}
